--- a/INDEX.html
+++ b/INDEX.html
@@ -55,7 +55,7 @@
             </div>
 
             <div class="profile_icon position-absolute">
-              <img src="https://placekitten.com/40/40" class="img-fluid" />
+              <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" class="img-fluid" />
             </div>
           </div>
         </div>
@@ -72,7 +72,7 @@
 
           <div class="row mt-4">
             <div class="col-2 col-lg-1">
-              <img src="https://placekitten.com/50/50" class="img-fluid" />
+              <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" class="img-fluid" />
             </div>
             <div class="col-10 col-lg-11">
               <textarea class="form-control"></textarea>
@@ -84,7 +84,7 @@
               <div class="tweet mt-5">
                 <div class="row">
                   <div class="col-2 col-sm-1">
-                    <img src="https://placekitten.com/40/40" class="img-fluid" />
+                    <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" class="img-fluid" />
                   </div>
                   <div class="col-10 col-sm-11">
                     <div>
@@ -95,14 +95,14 @@
                       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus totam iusto
                       laboriosam accusantium sunt dolore,
                     </p>
-                    <div><img src="https://placekitten.com/600/300" class="img-fluid" /></div>
+                    <div><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" class="img-fluid" /></div>
                   </div>
                 </div>
               </div>
               <div class="tweet mt-5">
                 <div class="row">
                   <div class="col-2 col-lg-1">
-                    <img src="https://placekitten.com/40/40" class="img-fluid" />
+                    <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" class="img-fluid" />
                   </div>
                   <div class="col-10 col-lg-11">
                     <div>
@@ -113,14 +113,14 @@
                       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus totam iusto
                       laboriosam accusantium sunt dolore,
                     </p>
-                    <div><img src="https://placekitten.com/600/300" class="img-fluid" /></div>
+                    <div><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" class="img-fluid" /></div>
                   </div>
                 </div>
               </div>
               <div class="tweet mt-5">
                 <div class="row">
                   <div class="col-2">
-                    <img src="https://placekitten.com/40/40" class="img-fluid" />
+                    <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" class="img-fluid" />
                   </div>
                   <div class="col-10">
                     <div>
@@ -131,7 +131,7 @@
                       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus totam iusto
                       laboriosam accusantium sunt dolore,
                     </p>
-                    <div><img src="https://placekitten.com/600/300" class="img-fluid" /></div>
+                    <div><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" class="img-fluid" /></div>
                   </div>
                 </div>
               </div>
@@ -163,7 +163,7 @@
                   </div>
                 </div>
                 <div class="col-3">
-                  <img src="https://placekitten.com/200/400" class="img-fluid" />
+                  <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" class="img-fluid" />
                 </div>
               </div>
               <div class="row align-items-center my-4">
@@ -180,7 +180,7 @@
                   </div>
                 </div>
                 <div class="col-3">
-                  <img src="https://placekitten.com/200/400" class="img-fluid" />
+                  <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" class="img-fluid" />
                 </div>
               </div>
             </div>
